// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance should render Balance 1`] = `
.c1 {
  box-sizing: border-box;
  display: inline-grid;
  min-height: 100%;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > * {
  min-width: 0;
}

.c2 {
  text-align: left;
}

.c2.c2.c2 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c2.c2.c2:hover {
  background: initial;
}

.c2.c2.c2:active {
  background: initial;
}

.c5 {
  text-align: left;
}

.c5.c5.c5 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c5.c5.c5:hover {
  background: initial;
}

.c5.c5.c5:active {
  background: initial;
}

.c4 {
  font-size: 1rem !important;
}

.c7 {
  font-size: 1rem !important;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 6px 12px;
  height: 56px;
  min-width: 200px;
  position: relative;
  border-radius: 999px;
  box-sizing: border-box;
  background: rgba(190,170,255,0);
  color: text;
  border: 2px solid #BEAAFF;
  white-space: nowrap;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c0:last-of-type {
  margin-right: 0;
}

.c0 .{
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  display: inline-block;
  width: 40px;
  height: 40px;
  font-family: Lato;
  font-weight: bold;
  color: #2C232E;
  background: #BEAAFF;
  box-sizing: border-box;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
  margin-right: 8px;
  line-height: 2em;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  margin-top: 0px;
  margin-left: -4px;
}

.c0 .sc-fodVxV {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  bottom: 0;
  right: 0;
  border: 2px solid #BEAAFF;
  color: #BEAAFF;
  background: #2C232E;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  -webkit-transform: translate(30%,30%);
  -ms-transform: translate(30%,30%);
  transform: translate(30%,30%);
}

.c0 .sc-fFubgz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  color: #2C232E;
}

.c0 .sc-kstrdz {
  position: absolute;
  top: 0;
  margin: -11px 8px 0;
  padding: 0 3px;
  background: #F0F0F0;
}

.c0 .sc-kstrdz:hover {
  background: #F0F0F0 !important;
}

.c0 .{
  vertical-align: middle;
  display: inline-block;
  height: 100%;
}

.c0 .sc-hHftDr.sc-hHftDr.sc-hHftDr {
  color: #6D6D86;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  margin-top: -12px;
}

.c0 .c3.c3.c3 {
  display: inline-block;
  vertical-align: middle;
  white-space: nowrap;
  color: #2C232E;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  padding-right: 10px;
  padding-top: 5px;
  font-weight: bold;
}

.c0 .c6 {
  display: inline-block;
  font-variant: small-caps;
  margin-left: 2px;
}

.c0 .sc-dmlrTW {
  display: inline-block;
  vertical-align: middle;
  margin: 4px 8px;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c0 .stackedExchangeRate {
  margin-top: -6px;
  padding-top: 0 !important;
}

.c0 .defaultExchangeRate {
  padding-top: 0 !important;
}

.c0 .exchangeRate {
  padding-right: 0 !important;
  padding-top: 0 !important;
}

<body>
  <div>
    <div
      background="primaryLilac"
      class="c0"
      currency="EUR"
      foreground="text"
    >
      <div
        class=""
      >
        €
      </div>
      <span
        class=""
      >
        <div
          class="c1"
        >
          <span
            class="MuiTypography-root c2 c3 c4 defaultExchangeRate MuiTypography-button"
          >
            21312
            <span
              class="MuiTypography-root c5 c6 c7 MuiTypography-button"
            >
              EUR
            </span>
          </span>
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`Balance should render Balance with foreground 1`] = `
<body>
  .c1 {
  box-sizing: border-box;
  display: inline-grid;
  min-height: 100%;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > * {
  min-width: 0;
}

.c2 {
  text-align: left;
}

.c2.c2.c2 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c2.c2.c2:hover {
  background: initial;
}

.c2.c2.c2:active {
  background: initial;
}

.c5 {
  text-align: left;
}

.c5.c5.c5 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c5.c5.c5:hover {
  background: initial;
}

.c5.c5.c5:active {
  background: initial;
}

.c4 {
  font-size: 1rem !important;
}

.c7 {
  font-size: 1rem !important;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 6px 12px;
  height: 56px;
  min-width: 200px;
  position: relative;
  border-radius: 999px;
  box-sizing: border-box;
  background: rgba(190,170,255,0);
  color: white;
  border: 2px solid #BEAAFF;
  white-space: nowrap;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c0:last-of-type {
  margin-right: 0;
}

.c0 .{
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  display: inline-block;
  width: 40px;
  height: 40px;
  font-family: Lato;
  font-weight: bold;
  color: #2C232E;
  background: #BEAAFF;
  box-sizing: border-box;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
  margin-right: 8px;
  line-height: 2em;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  margin-top: 0px;
  margin-left: -4px;
}

.c0 .sc-fodVxV {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  box-sizing: border-box;
  bottom: 0;
  right: 0;
  border: 2px solid #BEAAFF;
  color: #BEAAFF;
  background: #2C232E;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  -webkit-transform: translate(30%,30%);
  -ms-transform: translate(30%,30%);
  transform: translate(30%,30%);
}

.c0 .sc-fFubgz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  color: #2C232E;
}

.c0 .sc-kstrdz {
  position: absolute;
  top: 0;
  margin: -11px 8px 0;
  padding: 0 3px;
  background: #F0F0F0;
}

.c0 .sc-kstrdz:hover {
  background: #F0F0F0 !important;
}

.c0 .{
  vertical-align: middle;
  display: inline-block;
  height: 100%;
}

.c0 .sc-hHftDr.sc-hHftDr.sc-hHftDr {
  color: #6D6D86;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  margin-top: -12px;
}

.c0 .c3.c3.c3 {
  display: inline-block;
  vertical-align: middle;
  white-space: nowrap;
  color: #FFFFFF;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
  padding-right: 10px;
  padding-top: 5px;
  font-weight: bold;
}

.c0 .c6 {
  display: inline-block;
  font-variant: small-caps;
  margin-left: 2px;
}

.c0 .sc-dmlrTW {
  display: inline-block;
  vertical-align: middle;
  margin: 4px 8px;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c0 .stackedExchangeRate {
  margin-top: -6px;
  padding-top: 0 !important;
}

.c0 .defaultExchangeRate {
  padding-top: 0 !important;
}

.c0 .exchangeRate {
  padding-right: 0 !important;
  padding-top: 0 !important;
}

<div>
    <div
      background="primaryLilac"
      class="c0"
      currency="EUR"
      foreground="white"
    >
      <div
        class=""
      >
        €
      </div>
      <span
        class=""
      >
        <div
          class="c1"
        >
          <span
            class="MuiTypography-root c2 c3 c4 defaultExchangeRate MuiTypography-button"
          >
            21312
            <span
              class="MuiTypography-root c5 c6 c7 MuiTypography-button"
            >
              EUR
            </span>
          </span>
        </div>
      </span>
    </div>
  </div>
</body>
`;
